# sru

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  cuda_functional.py  cuda_functional2.py  requirements-test.txt  requirements.txt  setup.py  sru_functional.py  sru_functional.py.bak
.circleci/: config.yml
.github/workflows/: pythonpublish.yml
DrQA/: README.md  download.sh  prepro.py  requirements.txt  train.py
DrQA/drqa/: layers.py  model.py  rnn_reader.py
classification/: README.md  dataloader.py  modules.py  train.py  train_classifier.py
docs/: pytorch_installation.md
experiments/e2e_asr/: extension.py  tests.py
experiments/old/DrQA/drqa/: utils.py
experiments/old/classification/: dataloader.py  run_on_chat.py  run_on_chat2.py
experiments/old/language_model/: README.md  plot_hardconcrete.py  train_lm.py
experiments/old/speech/: BLSTM_5L.ndl  CNTK_Bi-SRU.config  CNTK_Bi-SRU_smbr.config  CNTK_SRU_smbr.config  LSTM_5L.ndl  README.md  SRU_12L.ndl  run_bi-sru.sh  run_swbd.sh
experiments/srupp_experiments/: README.md  data_utils.py  embedding.py  prepare_corpus.py  train_enwik8.py  train_enwik8_fp32_dp.py  train_lm1b.py  train_utils.py  train_wt103.py
language_model/: README.md  train_enwik8.py  train_lm.py  train_lm_big.py  train_wsj.py
metrics/: grad_utils.py
misc/: calc_speed.py  compare_cpu_speed_sru_gru.py  compare_gpu_speed_sru_gru.py  test_backward_with_transpose.py  test_cpu_impl.py  test_impl.py  test_mm.py  test_multigpu.py  test_sru.py
speech/: Bi-SRU_12L.ndl  CNTK_SRU.config  README.md  SRU_12L.ndl  make_fbank_pitch.sh  run_sru.sh
sru/: __init__.py  cuda_functional.py  custom_m_utils.py  modules.py  ops.py  sru_cpu_impl.cpp  sru_cuda_impl.cpp  sru_cuda_kernel.cu  sru_functional.py  test_cpu_impl.py  test_sru.py  version.py
sru/csrc/: CMakeLists.txt  README.md  main_test_cpp.cpp  sru_cpu_impl.cpp  sru_cuda_impl.cpp  sru_cuda_impl_dummy.cpp  sru_cuda_kernel.cu
test/: test.sh  test_1.py  test_amp.py  test_regression.sh  test_regression_1.py  test_regression_2.py  test_ts_cpp.py  test_ts_srupp.py  test_upgrade.sh
test/regression/: build_artifact.py  build_artifact.sh  test_regression.py  test_regression.sh
test/regression/artifacts/: 2.3.5.pt
test/sru/: test_custom_m_utils.py  test_sru.py  test_torchscript.py
test_examples/: test_multigpu.py
